updated all pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Design is Everything</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
+        .lato-font{
+            font-family: 'Lato',sans-serif;
+        }
       .active {
         background-color: yellow;
         color: blue;
@@ -99,14 +103,14 @@
   
       <!-- Text Section -->
       <div class="w-full md:w-1/2 text-center md:text-left py-10">
-        <h1 class="text-2xl text-white sm:text-3xl md:text-4xl font-bold leading-tight md:text-left">
+        <h1 class="lato-font text-3xl text-white sm:text-4xl md:text-4xl leading-tight md:text-left">
           WE BELIEVE THAT<br> 
           INTELLIGENT CREATIVE<br> 
           THINKING HELPS<br> 
           ORGANISATIONS AND<br> 
           INDIVIDUALS TO GROW
         </h1>
-        <p class="text-base md:text-lg mt-4 text-[#056b29] md:text-left">
+        <p class="lato-font md:text-lg mt-4 text-[#056b29] md:text-left">
           Every relationship with every client is a partnership; we work alongside them to make their goals a reality 
           and help them to grow their businesses. Whatever the task, no matter whether it's big or small, we bring our 
           experience and expertise to that project and strive to deliver the best possible solution.
@@ -158,7 +162,7 @@
         <div class="grid-item col-span-1 sm:col-start-3 sm:row-start-5 bg-red-700 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Redknot_image_work.png')">
             <img src="/MIW_Website_Assets/Redknot_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" style="object-position: left;"/>
         </div>
         <div class="grid-item col-span-2 sm:col-span-2 sm:col-start-4 sm:row-start-5 bg-gray-200 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Coffe_image_work.png')">
@@ -248,7 +252,7 @@
                 <div class="wrapper">
                     <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-contain w-full sm:h-72" />
                 </div>
-                <img src="/MIW_Website_Assets/Kaththi-02.png" class="character pt-5 w-full h-72 sm:58" />
+                <img src="/MIW_Website_Assets/Kaththi-02.png" class="character w-full h-72 sm:58" />
             </div>
         </a>
     </div>
