--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/src/bento.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
+        body{
+            font-family: 'Lato',sans-serif;
+        }
         .slide-in {
             opacity: 0;
             transform: translateY(50px);
@@ -47,7 +51,7 @@
         <!-- Menu Items -->
         <ul class="text-center leading-[2.5rem]">
             <li class="mt-2"><a href="/index.html">H O M E</a></li>
-            <li class="mt-2"><a href="#">W O R K</a></li>
+            <li class="mt-2"><a href="/work.html">W O R K</a></li>
             <li class="mt-2"><a href="/aboutus.html" class="font-bold text-blue-900">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html">T E A M</a></li>
