--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Contact Us</title>
+    <style>
+        body{
+            font-family: 'Lato',sans-serif;
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -36,7 +42,7 @@
         <!-- Menu Items -->
         <ul class="text-center leading-[2.5rem]">
             <li class="mt-2"><a href="/index.html">H O M E</a></li>
-            <li class="mt-2"><a href="#">W O R K</a></li>
+            <li class="mt-2"><a href="/work.html">W O R K</a></li>
             <li class="mt-2"><a href="/aboutus.html">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html">T E A M</a></li>
