--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Desktop Menu -->
         <ul class="hidden md:flex space-x-6 text-lg uppercase text-white">
             <li><a href="/index.html" class="active">Home</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="/work.html">Work</a></li>
             <li><a href="/aboutus.html">About</a></li>
             <li><a href="/service.html">Services</a></li>
             <li><a href="/team.html">Team</a></li>
@@ -85,11 +85,11 @@
         <!-- Menu Items -->
         <ul class="text-center leading-[2.5rem]">
             <li class="mt-2"><a href="/index.html" class="font-bold text-blue-900">H O M E</a></li>
-            <li class="mt-2"><a href="#">W O R K</a></li>
+            <li class="mt-2"><a href="/work.html">W O R K</a></li>
             <li class="mt-2"><a href="/aboutus.html">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html" >T E A M</a></li>
-            <li class="mt-2"><a href="#">C O N T A C T</a></li>
+            <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
         </ul>
     </div>
 
