--- a/service.html
+++ b/service.html
@@ -7,9 +7,13 @@
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         html {
             scroll-behavior: smooth;
+        }
+        body{
+            font-family: 'Lato',sans-serif;
         }
         .active {
             background-color: yellow;
@@ -61,7 +65,7 @@
           <!-- Desktop Menu -->
           <ul class="hidden md:flex space-x-6 text-lg uppercase text-blue-700">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="/work.html">Work</a></li>
             <li><a href="/aboutus.html">About</a></li>
             <li><a href="/service.html" class="active">Services</a></li>
             <li><a href="/team.html">Team</a></li>
@@ -85,7 +89,7 @@
         <!-- Menu Items -->
         <ul class="text-center leading-[2.5rem]">
             <li class="mt-2"><a href="/index.html">H O M E</a></li>
-            <li class="mt-2"><a href="#">W O R K</a></li>
+            <li class="mt-2"><a href="/work.html">W O R K</a></li>
             <li class="mt-2"><a href="/aboutus.html">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html" class="font-bold text-blue-900">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html" >T E A M</a></li>
@@ -300,10 +304,9 @@
         
         </div>
     </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
-
     <script>
         const menuBtn = document.getElementById('menu-btn');
         const closeMenuBtn = document.getElementById('close-menu');
