--- a/work.html
+++ b/work.html
@@ -60,16 +60,16 @@
     </div>
 
     <!--Main Content-->
-    <section class="flex items-center justify-center h-[70dvh] px-6 md:px-12 bg-[#ffffff] w-full">
+    <section class="flex items-center justify-center h-[100dvh] sm:h-[70dvh] px-6 md:px-12 bg-[#ffffff] w-full">
         <div class="flex flex-col md:flex-row items-center justify-between w-full max-w-6xl">
             <!-- Logo Section -->
-            <div class="w-full md:w-[40%] flex justify-center">
+            <div class="w-full pb-16 sm:pb-0 md:w-[40%] flex justify-center">
                 <img src="/work assets/logo-header.png" alt="Magic White Logo" class="h-[180px] md:h-[260px] w-auto">
             </div>
     
             <!-- Text Section -->
-            <div class="w-full md:w-[60%] text-center md:text-left">
-                <h1 class="lato-font text-[60px] md:text-[72px] text-[#00001b] font-light tracking-wide leading-tight">
+            <div class="w-full sm:w-[60%] text-center md:text-left">
+                <h1 class="lato-font text-[54px] md:text-[54px] sm:text-[72px] text-[#00001b] font-light tracking-wide leading-tight">
                     OUR WORK
                 </h1>
                 <p class="lato-font md:text-lg mt-4 text-[#00001b] max-w-[450px]">
