--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         background-color: yellow;
         color: blue;
         padding: 30px 10px 18px 10px;
-    }
+        }
 
     .grid-layout {
       height: 100vh;
@@ -102,7 +102,7 @@
           ORGANISATIONS AND<br> 
           INDIVIDUALS TO GROW
         </h1>
-        <p class="lato-font w-[77%] md:text-lg mt-4 text-[#056b29] md:text-left">
+        <p class="lato-font w-full md:w-[77%] md:text-lg mt-4 text-[#056b29] text-center md:text-left">
           Every relationship with every client is a partnership; we work alongside them to make their goals a reality 
           and help them to grow their businesses. Whatever the task, no matter whether it's big or small, we bring our 
           experience and expertise to that project and strive to deliver the best possible solution.
