blocking dev tools

--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
         }
     </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     <!-- Navbar -->
     <nav id="navbar" class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none shadow-md transition-transform duration-500 ease-in-out opacity-100 fixed w-full top-0 left-0 px-5 z-50">
         <div class="flex py-2 justify-between items-center w-full max-w-full mx-auto">
@@ -104,7 +104,7 @@
         <!-- Second Section -->
         <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
           <!-- Green Accent Blocks - Hidden on small screens -->
-          <div class="block absolute top-[1%] right-0 h-[8%] w-[20%] sm:top-[2%] sm:left-[23.4%] sm:w-[16%] sm:h-[22%] bg-[url('/about-assets/green-box-1.png')] slide-in"></div>
+          <div class="block absolute -top-0 right-0 h-[8%] w-[20%] sm:top-[2%] sm:left-[23.4%] sm:w-[16%] sm:h-[22%] bg-[url('/about-assets/green-box-1.png')] slide-in"></div>
           <div class="block absolute top-[90%] right-0 sm:top-[64%] sm:left-[11.8%] w-[40%] sm:w-[11.7%] h-[8%] sm:h-[12%] bg-[url('/about-assets/green-box-2.png')] slide-in"></div>
           <div class="hidden md:block absolute bottom-[9.7%] right-0 w-[15%] h-[8%] bg-[url('/about-assets/green-box-3.png')] slide-in"></div>
       
@@ -135,7 +135,7 @@
           <!-- Blue Accent Blocks - Hidden on small screens -->
           <div class="block absolute top-0 left-0 sm:top-[5%] sm:left-0 w-[25%] sm:w-[2%] h-[7.8%] sm:h-[30%] bg-[url('/about-assets/blue-box-1.png')] slide-in"></div>
           <div class="hidden md:block absolute top-0 right-[25%] w-[10%] h-[5%] bg-[url('/about-assets/blue-box-2.png')] slide-in"></div>
-          <div class="block absolute bottom-24 right-0 sm:bottom-[16%] sm:right-[27%] w-[30%] sm:w-[20%] h-24 sm:h-[32%] bg-[url('/about-assets/blue-box-3.png')] slide-in"></div>
+          <div class="block absolute bottom-10 right-0 sm:bottom-[16%] sm:right-[27%] w-[30%] sm:w-[20%] h-24 sm:h-[32%] bg-[url('/about-assets/blue-box-3.png')] slide-in"></div>
       
           <!-- Office Image -->
           <div class="pt-16 md:absolute md:top-[5%] md:left-[18%] md:w-[20%] md:h-[25%] w-full slide-in">
