--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     <!-- Navbar -->
     <nav id="navbar" class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none shadow-md sm:shadow-none transition-transform duration-500 ease-in-out opacity-100 fixed w-full top-0 left-0 px-5 z-50">
         <div class="flex py-2 justify-between items-center w-full max-w-full mx-auto">
