service page header image updated

--- a/service.html
+++ b/service.html
@@ -93,10 +93,18 @@
 	</div>
 
 
-	<!-- Main Image Section with Parallax Effect -->
-	<section class="h-screen w-full md:bg-cover bg-center bg-fixed bg-no-repeat"
-		style="background-image: url('/services-assets/Services-Header-center.png');">
-	</section>
+	<!-- Desktop Background -->
+<section
+class="hidden md:block h-screen w-full bg-cover bg-center bg-fixed bg-no-repeat"
+style="background-image: url('/services-assets/services-header-desktop.png');">
+</section>
+
+<!-- Mobile Background -->
+<section
+class="block md:hidden h-screen w-full bg-cover bg-center bg-fixed bg-no-repeat"
+style="background-image: url('/services-assets/services-header-mobile.png');">
+</section>
+
 
 	<!-- <section class="h-[96dvh] relative overflow-hidden">
         <img src="/services-assets/Services-Header.png" 
