individual team updated

--- a/team.html
+++ b/team.html
@@ -74,59 +74,69 @@
 
 
     <!-- Individual Team Section -->
-<section class="py-16 px-6">
-    <div class="relative max-w-screen-lg mx-auto">
-        <!-- Person 1 -->
-        <div class="flex flex-col-reverse sm:flex-row items-center mt-24 pb-20 gap-10 sm:gap-20 sm:mr-[38%] text-center sm:text-right">
-            <div class="w-full sm:w-1/2">
-                <h2 class="text-lg font-bold">GOPI PRASANNAA</h2>
-                <p class="text-gray-600">CEO / FOUNDER</p>
-            </div>
-            <div class="relative w-full sm:w-1/2 flex justify-center sm:block">
-                <img src="/png-team/base.png" alt="Circle" class="absolute top-10 sm:top-20 left-30 sm:-left-10  w-40 sm:w-56 -z-10">
-                <img src="/png-team/specs-dude.png" alt="Person 1" class="relative w-32 sm:w-40 z-10">
-            </div>
+ <!-- Individual Team Section -->
+ <section class="py-16 px-6">
+    <div class="w-auto xl:w-6/7 2xl:w-3/4 mx-auto">
+      <!-- Person 1 -->
+      <div class="w-full flex gap-2 justify-start">
+        <div class="text-right flex flex-col justify-center">
+          <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">GOPI PRASANNAA</h2>
+          <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CEO / FOUNDER</p>
         </div>
+        <div class="relative">
+          <img src="/png-team/specs-dude.png" alt="Person 1" class="relative w-40 sm:w-52 md:w-72 z-10">
+          <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-25%] w-40 sm:w-52 md:w-72">
 
-        <!-- Person 2 -->
-        <div class="flex flex-col-reverse sm:flex-row-reverse items-center justify-center sm:justify-end gap-10 sm:gap-20 sm:ml-[50%] text-center sm:text-left">
-            <div class="w-full sm:w-1/2">
-                <h2 class="text-lg font-bold">S V UDAYAKUMAR</h2>
-                <p class="text-gray-600">CREATIVE DIRECTOR</p>
-            </div>
-            <div class="relative w-full sm:w-1/2 flex justify-center sm:block">
-                <img src="/png-team/base.png" alt="Circle" class="absolute top-32 sm:top-40 left-15 sm:left-0 w-40 sm:w-56 -z-10">
-                <img src="/png-team/beard-dude.png" alt="Person 2" class="relative w-32 sm:w-40 z-10">
-            </div>
-            
         </div>
+      </div>
 
-        <!-- Person 3 -->
-        <div class="flex flex-col-reverse sm:flex-row items-center mb-20 gap-10 sm:gap-20 sm:mr-[45%] text-center sm:text-right">
-            <div class="w-full sm:w-1/2">
-                <h2 class="text-lg font-bold">GOPI PRASANNAA</h2>
-                <p class="text-gray-600">CEO / FOUNDER</p>
-            </div>
-            <div class="relative w-full sm:w-1/2 flex justify-center sm:block">
-                <img src="/png-team/base.png" alt="Circle" class="absolute top-28 sm:top-36 left-25 sm:left-0 w-40 sm:w-56 -z-10">
-                <img src="/png-team/young-dude.png" alt="Person 3" class="relative w-32 sm:w-40 left-2 sm:left-6 z-10">
-            </div>
+      <!-- Person 2 -->
+      <div class="w-full flex gap-2 justify-start flex-row-reverse">
+        <div class="text-left flex flex-col justify-center">
+          <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">S V UDAYAKUMAR</h2>
+          <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CREATIVE DIRECTOR</p>
         </div>
+        <div class="relative">
+          <img src="/png-team/beard-dude.png" alt="Person 2" class="relative w-32 sm:w-40 md:w-64 z-10">
+          <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-15%] w-32 sm:w-40 md:w-64">
 
-        <!-- Person 4 -->
-        <div class="flex flex-col-reverse sm:flex-row-reverse items-center justify-center sm:justify-end sm:ml-[58%] text-center sm:text-left">
-            <div class="w-full sm:w-1/2">
-                <h2 class="text-lg font-bold">S V UDAYAKUMAR</h2>
-                <p class="text-gray-600">CREATIVE DIRECTOR</p>
-            </div>
-            <div class="relative w-full sm:w-1/2 flex justify-center sm:block">
-                <img src="/png-team/base.png" alt="Circle" class="absolute top-32 sm:top-44 left-14 sm:-left-4 sm:-left-10 w-40 sm:w-56 -z-10">
-                <img src="/png-team/girl.png" alt="Person 4" class="relative w-32 sm:w-40 z-10">
-            </div>
-            
+
         </div>
-    </div>
-</section>
+      </div>
+
+      <!-- Person 3 -->
+      <div class="w-full flex gap-2 justify-start">
+        <div class="text-right flex flex-col justify-center">
+          <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">GOPI PRASANNAA</h2>
+          <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CEO / FOUNDER</p>
+        </div>
+        <div class="relative">
+          <img src="/png-team/young-dude.png" alt="Person 3" class="relative w-40 sm:w-52 md:w-72 z-10">
+          <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-25%] w-40 sm:w-52 md:w-72 ">
+
+        </div>
+      </div>
+
+      <!-- Person 4 -->
+      <div class="w-full flex sm:gap-2 justify-start flex-row-reverse">
+        <div class="text-left flex flex-col justify-center">
+          <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">S V UDAYAKUMAR</h2>
+          <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CREATIVE DIRECTOR</p>
+
+
+
+
+
+
+        </div>
+        <div class="relative">
+          <img src="/png-team/girl.png" alt="Person 4" class="relative w-40 sm:w-48 md:w-72 z-10">
+          <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-15%] w-40 sm:w-48 md:w-72 ">
+        </div>
+      </div>
+
+
+  </section>
 
 
    <!-- whole team -->
