adjusting the spacing

--- a/contactus.html
+++ b/contactus.html
@@ -56,7 +56,7 @@
                     flex-col md:flex-row pt-8 sm:pt-0">
             
             <!-- Left Side (SVG Image) -->
-            <div class="md:w-1/2 flex items-center px-10 md:px-12 py-6 md:py-28 justify-center border-b-2 border-dotted border-gray-400 sm:border-0" style="border-image: repeating-linear-gradient(to right, #000 0, #000 1px, transparent 1px, transparent 7px) 100% 1;">
+            <div class="md:w-1/2 flex items-center px-10 md:px-16 py-6 md:py-32 sm:px-16 sm:py-32 justify-center border-b-2 border-dotted border-gray-400 sm:border-0" style="border-image: repeating-linear-gradient(to right, #000 0, #000 1px, transparent 1px, transparent 7px) 100% 1;">
                 <svg xmlns="http://www.w3.org/2000/svg" id="Layer_4" data-name="Layer 4" viewBox="0 0 265.92 225">
                     <defs>
                         <style>
