--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </head>
   <body oncontextmenu="return false;">
     <!-- Navbar -->
-    <nav id="navbar" class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none shadow-md transition-transform duration-500 ease-in-out opacity-100 fixed w-full top-0 left-0 px-5 z-50">
+    <nav id="navbar" class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none transition-transform duration-500 ease-in-out opacity-100 fixed w-full top-0 left-0 px-5 z-50">
         <div class="flex py-2 justify-between items-center w-full max-w-full mx-auto">
             <!-- Logo (Left Corner) -->
             <div class="cursor-pointer" onclick="window.location.href='/index.html'">
@@ -219,7 +219,7 @@
       <!-- Image Section (Grid for responsiveness) -->
     <div class="w-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
         <!-- Left Image -->
-        <a href="#" onclick="event.preventDefault();" class="flex justify-center">
+        <a href="#" onclick="event.preventDefault();" class="flex justify-center"  data-autoclick>
             <div class="card mb-20 sm:mb-0">
                 <div class="wrapper">
                     <img src="/MIW_Website_Assets/SD-10.png" class="title object-contain w-full h-60 sm:h-full" />
@@ -229,7 +229,7 @@
         </a>
 
         <!-- Middle Image (Higher than others) -->
-        <a href="#" onclick="event.preventDefault();" class="flex justify-center">
+        <a href="#" onclick="event.preventDefault();" class="flex justify-center"  data-autoclick>
             <div class="card mb-20 sm:mb-0">
                 <div class="wrapper">
                     <img src="/MIW_Website_Assets/PS-Nandini-01png.png" class="title object-cover w-full h-72 sm:h-80" />
@@ -239,7 +239,7 @@
         </a>
 
         <!-- Right Image -->
-        <a href="#" onclick="event.preventDefault();" class="flex justify-center">
+        <a href="#" onclick="event.preventDefault();" class="flex justify-center"  data-autoclick>
             <div class="card mb-20 sm:mb-0">
                 <div class="wrapper">
                     <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-contain w-full sm:h-72" />
@@ -451,6 +451,60 @@
 
             lastScrollY = currentScrollY;
         });
+        document.addEventListener('DOMContentLoaded', function () {
+        let isMobileView = window.innerWidth <= 450;
+        const cards = document.querySelectorAll('.card');
+
+        function enableMobileInteraction() {
+            checkCardsInCenter(cards);
+            window.addEventListener('scroll', onScroll, { passive: true });
+        }
+
+        function disableMobileInteraction() {
+            window.removeEventListener('scroll', onScroll);
+            cards.forEach(card => card.classList.remove('mobile-hover'));
+        }
+
+        function onScroll() {
+            checkCardsInCenter(cards);
+        }
+
+        function checkCardsInCenter(cards) {
+            cards.forEach(card => {
+                if (isElementInCenterOfViewport(card)) {
+                    card.classList.add('mobile-hover');
+                } else {
+                    card.classList.remove('mobile-hover');
+                }
+            });
+        }
+
+        function isElementInCenterOfViewport(element) {
+            const rect = element.getBoundingClientRect();
+            const windowHeight = window.innerHeight;
+            const elementCenter = rect.top + rect.height / 2;
+            const viewportCenter = windowHeight / 2;
+            return Math.abs(elementCenter - viewportCenter) < 150;
+        }
+
+        // Initial behavior
+        if (isMobileView) {
+            enableMobileInteraction();
+        }
+
+        // Handle resize to switch between mobile and desktop views
+        window.addEventListener('resize', function () {
+            const nowMobile = window.innerWidth <= 450;
+            if (nowMobile !== isMobileView) {
+                isMobileView = nowMobile;
+                if (isMobileView) {
+                    enableMobileInteraction();
+                } else {
+                    disableMobileInteraction();
+                }
+            }
+        });
+    });
     </script>
     <script>
        function openFullscreen(imageSrc) {
