--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
   <section class="py-16 px-6">
     <div class="w-auto xl:w-6/7 2xl:w-3/4 mx-auto">
       <!-- Person 1 -->
-      <div class="w-full flex gap-2 justify-start">
+      <div class="w-full pt-10 flex gap-2 justify-start">
         <div class="text-right flex flex-col justify-center">
           <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">GOPI PRASANNAA</h2>
           <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CEO / FOUNDER</p>
@@ -86,12 +86,11 @@
         <div class="relative">
           <img src="/png-team/specs-dude.png" alt="Person 1" class="relative w-40 sm:w-52 md:w-72 z-10">
           <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-25%] w-40 sm:w-52 md:w-72">
-
         </div>
       </div>
 
       <!-- Person 2 -->
-      <div class="w-full flex gap-2 justify-start flex-row-reverse">
+      <div class="w-full pt-16 flex gap-2 justify-start flex-row-reverse">
         <div class="text-left flex flex-col justify-center">
           <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">S V UDAYAKUMAR</h2>
           <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CREATIVE DIRECTOR</p>
@@ -99,13 +98,11 @@
         <div class="relative">
           <img src="/png-team/beard-dude.png" alt="Person 2" class="relative w-32 sm:w-40 md:w-64 z-10">
           <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-15%] w-32 sm:w-40 md:w-64">
-
-
         </div>
       </div>
 
       <!-- Person 3 -->
-      <div class="w-full flex gap-2 justify-start">
+      <div class="w-full pt-16 flex gap-2 justify-start">
         <div class="text-right flex flex-col justify-center">
           <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">GOPI PRASANNAA</h2>
           <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CEO / FOUNDER</p>
@@ -113,29 +110,20 @@
         <div class="relative">
           <img src="/png-team/young-dude.png" alt="Person 3" class="relative w-40 sm:w-52 md:w-72 z-10">
           <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-25%] w-40 sm:w-52 md:w-72 ">
-
         </div>
       </div>
 
       <!-- Person 4 -->
-      <div class="w-full flex sm:gap-2 justify-start flex-row-reverse">
+      <div class="w-full pt-16 flex sm:gap-2 justify-start flex-row-reverse">
         <div class="text-left flex flex-col justify-center">
           <h2 class="text-sm md:text-2xl lg:text-4xl font-bold">S V UDAYAKUMAR</h2>
           <p class="text-xs md:text-xl lg:text-3xl text-gray-600">CREATIVE DIRECTOR</p>
-
-
-
-
-
-
         </div>
         <div class="relative">
           <img src="/png-team/girl.png" alt="Person 4" class="relative w-40 sm:w-48 md:w-72 z-10">
           <img src="/png-team/base.png" alt="Circle" class="absolute bottom-[-15%] w-40 sm:w-48 md:w-72 ">
         </div>
       </div>
-
-
   </section>
 
 
