--- a/service.html
+++ b/service.html
@@ -30,44 +30,51 @@
 			transform-origin: center;
 		}
 
-        /* Optional: Adding a slight tilt effect */
-        .grid img:hover {
-            transform: scale(1) rotateX(8deg) rotateY(8deg);
-            overflow: hidden;
-        }
-        .custom-width{
-            width: 450px;
-        }
-        .posters{
-            overflow: hidden;
-            position: relative;
-        }
-        .posters img {
-            width: 110%; 
-            height: 130%; 
-            object-fit: cover; 
-            transform-origin: center;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            will-change: transform;
-            transform: translateZ(0);
-        }
-    </style>
+		/* Optional: Adding a slight tilt effect */
+		.grid img:hover {
+			transform: scale(1) rotateX(8deg) rotateY(8deg);
+			overflow: hidden;
+		}
+
+		.custom-width {
+			width: 450px;
+		}
+
+		.posters {
+			overflow: hidden;
+			position: relative;
+		}
+
+		.posters img {
+			width: 110%;
+			height: 130%;
+			object-fit: cover;
+			transform-origin: center;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			will-change: transform;
+			transform: translateZ(0);
+		}
+	</style>
 </head>
+
 <body oncontextmenu="return false;">
-    <!-- Navbar -->
-    <nav id="navbar" class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none transition-transform duration-500 ease-in-out opacity-100 fixed w-full top-0 left-0 px-5 z-50">
-        <div class="flex py-2 justify-between items-center w-full max-w-full mx-auto">
-            <!-- Logo (Left Corner) -->
-            <div class="cursor-pointer" onclick="window.location.href='/index.html'">
-                <img id="logo-img" src="/services-assets/Logo-on-menu.png" alt="logo" class="w-8 h-8 sm:w-12 sm:h-12 md:w-14 md:h-14">
-            </div>
+	<!-- Navbar -->
+	<nav id="navbar"
+		class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none transition-transform duration-500 ease-in-out opacity-100 fixed w-full top-0 left-0 px-5 z-50">
+		<div class="flex py-2 justify-between items-center w-full max-w-full mx-auto">
+			<!-- Logo (Left Corner) -->
+			<div class="cursor-pointer" onclick="window.location.href='/index.html'">
+				<img id="logo-img" src="/services-assets/Logo-on-menu.png" alt="logo"
+					class="w-8 h-8 sm:w-12 sm:h-12 md:w-14 md:h-14">
+			</div>
 
 			<!-- Mobile Menu Button (Right Corner) -->
 			<button id="menu-btn" class="hover:text-yellow-400 transition duration-300">
-				<img id="menu-icon" src="/services-assets/Hamburger-menu.png" alt="nav button" class="w-7 h-6 sm:w-9 sm:h-8 md:w-9 md:h-8">
+				<img id="menu-icon" src="/services-assets/Hamburger-menu.png" alt="nav button"
+					class="w-7 h-6 sm:w-9 sm:h-8 md:w-9 md:h-8">
 			</button>
 		</div>
 	</nav>
@@ -77,7 +84,8 @@
 	<div id="mobile-menu"
 		class="fixed top-0 left-0 w-full h-full bg-[#ffd527] flex flex-col justify-center items-center text-[#2025f8] text-xl uppercase tracking-widest z-50 hidden">
 		<!-- Close Button -->
-		<button id="close-menu" class="absolute top-6 right-6 text-4xl font-bold text-[#2025f8] transition duration-300">
+		<button id="close-menu"
+			class="absolute top-6 right-6 text-4xl font-bold text-[#2025f8] transition duration-300">
 			✖
 		</button>
 
@@ -94,16 +102,14 @@
 
 
 	<!-- Desktop Background -->
-<section
-class="hidden md:block h-screen w-full bg-cover bg-center bg-fixed bg-no-repeat"
-style="background-image: url('/services-assets/services-header-desktop.png');">
-</section>
+	<section class="hidden md:block h-screen w-full bg-cover bg-center bg-fixed bg-no-repeat"
+		style="background-image: url('/services-assets/services-header-desktop.png');">
+	</section>
 
-<!-- Mobile Background -->
-<section
-class="block md:hidden h-screen w-full bg-cover bg-center bg-fixed bg-no-repeat"
-style="background-image: url('/services-assets/services-header-mobile.png');">
-</section>
+	<!-- Mobile Background -->
+	<section class="block md:hidden h-screen w-full bg-cover bg-center bg-fixed bg-no-repeat"
+		style="background-image: url('/services-assets/services-header-mobile.png');">
+	</section>
 
 
 	<!-- <section class="h-[96dvh] relative overflow-hidden">
@@ -115,7 +121,8 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 	<!-- Grid Layout -->
 	<section class="grid grid-cols-7 grid-rows-12 min-h-[200vh]">
 		<!-- Content 1 -->
-		<div class="col-span-4 row-span-2 bg-green-500 px-4 md:px-6 lg:px-8 text-white flex items-center justify-center">
+		<div
+			class="col-span-4 row-span-2 bg-green-500 px-4 md:px-6 lg:px-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
 				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2">BRANDING</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose">
@@ -157,7 +164,8 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 			<div class="text-left custom-width">
 				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2">DESIGNING</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose">
-					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT, UI/UX DESIGN, PROTOTYPING AND WIREFRAMING,
+					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT, UI/UX DESIGN, PROTOTYPING AND
+					WIREFRAMING,
 					MOTION GRAPHICS & ANIMATION
 				</p>
 				<button class="mt-4">
@@ -196,7 +204,8 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 			<div class="text-left custom-width">
 				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2">UI / UX</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose">
-					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER MARKETING
+					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
+					MARKETING
 				</p>
 				<button class="mt-4">
 					<img src="/services-assets/explore-button-white.png" alt="Explore" class="w-16 sm:w-20 md:w-24">
@@ -220,7 +229,8 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 			<div class="text-right custom-width text-blue-700">
 				<h1 class="text-3xl md:text-4xl font-bold pb-2">INTEGRATED MARKETING</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose">
-					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND PARTNERSHIPS
+					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
+					PARTNERSHIPS
 				</p>
 				<button class="mt-4">
 					<img src="/services-assets/explore-button-blue.png" alt="Explore" class="w-16 sm:w-20 md:w-24">
@@ -244,7 +254,8 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 
 				<div class="mt-10 grid grid-cols-1 gap-y-6 w-full">
 					<!-- First Row: Lists (Grid of 5 Items) -->
-					<div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-5 gap-x-6 gap-y-6 w-full text-left md:text-left">
+					<div
+						class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-5 gap-x-6 gap-y-6 w-full text-left md:text-left">
 						<div class="w-full order-1 md:order-none">
 							<h3 class="font-semibold">HOME</h3>
 							<ul class="space-y-1">
@@ -288,7 +299,8 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 						</div>
 					</div>
 					<!-- Second Row: Button & Social Media Icons -->
-					<div class="flex flex-col sm:flex-row justify-between items-center w-full space-y-8 mt-8 sm:space-y-0">
+					<div
+						class="flex flex-col sm:flex-row justify-between items-center w-full space-y-8 mt-8 sm:space-y-0">
 						<button
 							class="bg-pink-500 border border-white px-6 py-3 text-lg text-white font-semibold flex items-center gap-2">
 							<img src="/footer-png/share-button.png" alt="Share Icon" class="w-6 h-6"> Share this Website
@@ -375,153 +387,179 @@ style="background-image: url('/services-assets/services-header-mobile.png');">
 			}
 		}
 
-    // Run function on page load and resize
-    window.addEventListener("load", updatePlaceholder);
-    window.addEventListener("resize", updatePlaceholder);
-    </script>    
-    <script>
-      gsap.utils.toArray('.posters').forEach((poster) => {
-    // Calculate a movement amount based on the element's height
-    // This helps to scale the effect appropriately
-    const posterHeight = poster.offsetHeight;
-    const movementAmount = posterHeight * 0.05; // 10% of the element's height
-    
-    gsap.fromTo(
-        poster.querySelector('img'),
-        { 
-            y: -movementAmount, 
-            scale: 1.1  // Scale up to cover potential blank spaces
-        },
-        {
-            y: movementAmount,
-            scale: 1.1, // Keep consistent scale throughout
-            ease: "none",
-            scrollTrigger: {
-                trigger: poster,
-                start: 'top bottom',
-                end: 'bottom top',
-                scrub: 0.8,     // Smooth delay but not too much
-            }
-        }
-    );
-});
+		// Run function on page load and resize
+		window.addEventListener("load", updatePlaceholder);
+		window.addEventListener("resize", updatePlaceholder);
+	</script>
+	<script>
+		//       gsap.utils.toArray('.posters').forEach((poster) => {
+		//     // Calculate a movement amount based on the element's height
+		//     // This helps to scale the effect appropriately
+		//     const posterHeight = poster.offsetHeight;
+		//     const movementAmount = posterHeight * 0.05; // 10% of the element's height
 
-    </script>
+		//     gsap.fromTo(
+		//         poster.querySelector('img'),
+		//         { 
+		//             y: -movementAmount, 
+		//             scale: 1.1  // Scale up to cover potential blank spaces
+		//         },
+		//         {
+		//             y: movementAmount,
+		//             scale: 1.1, // Keep consistent scale throughout
+		//             ease: "none",
+		//             scrollTrigger: {
+		//                 trigger: poster,
+		//                 start: 'top bottom',
+		//                 end: 'bottom top',
+		//                 scrub: 0.8,     // Smooth delay but not too much
+		//             }
+		//         }
+		//     );
+		// });
+
+		gsap.utils.toArray('.posters').forEach((poster) => {
+			const image = poster.querySelector('img');
+		    const posterHeight = poster.offsetHeight;
+		    const movementAmount = posterHeight * 0.05; // 10% of the element's height
+
+			gsap.fromTo(
+				image,
+				{
+					y: -50,
+					scale: 1.05
+				},
+				{
+					y: 50,
+					scale: 1.15,
+					ease: "none",
+					scrollTrigger: {
+						trigger: poster,
+						start: "top bottom",
+						end: "bottom top",
+						scrub: 0,
+						invalidateOnRefresh: true
+					}
+				}
+			);
+		});
+
+	</script>
 	<script>
 		// Enhanced function to check background section color and invert images if needed
-	function checkBackgroundAndInvertImages() {
-		const navbar = document.getElementById('navbar');
-		const logo = document.getElementById('logo-img');
-		const menuIcon = document.getElementById('menu-icon');
-		
-		// Get the scroll position to determine what section we're on
-		const scrollY = window.scrollY;
-		
-		// Get elements that navbar might be overlapping
-		const sections = document.querySelectorAll('section');
-		let currentSection = null;
-		
-		// Find which section the navbar is currently overlapping
-		for (const section of sections) {
-			const rect = section.getBoundingClientRect();
-			// If the navbar is within the top portion of this section
-			if (rect.top <= 80 && rect.bottom > 0) {
-				currentSection = section;
-				break;
+		function checkBackgroundAndInvertImages() {
+			const navbar = document.getElementById('navbar');
+			const logo = document.getElementById('logo-img');
+			const menuIcon = document.getElementById('menu-icon');
+
+			// Get the scroll position to determine what section we're on
+			const scrollY = window.scrollY;
+
+			// Get elements that navbar might be overlapping
+			const sections = document.querySelectorAll('section');
+			let currentSection = null;
+
+			// Find which section the navbar is currently overlapping
+			for (const section of sections) {
+				const rect = section.getBoundingClientRect();
+				// If the navbar is within the top portion of this section
+				if (rect.top <= 80 && rect.bottom > 0) {
+					currentSection = section;
+					break;
+				}
+			}
+
+			// If we found a current section, get its background color
+			if (currentSection) {
+				const sectionBgColor = window.getComputedStyle(currentSection).backgroundColor;
+				const sectionBgImage = window.getComputedStyle(currentSection).backgroundImage;
+
+				// Check if this is a section where we need to invert
+				if (needsInversion(sectionBgColor, sectionBgImage)) {
+					logo.style.filter = "invert(1)";
+					menuIcon.style.filter = "invert(1)";
+				} else {
+					logo.style.filter = "none";
+					menuIcon.style.filter = "none";
+				}
 			}
 		}
-		
-		// If we found a current section, get its background color
-		if (currentSection) {
-			const sectionBgColor = window.getComputedStyle(currentSection).backgroundColor;
-			const sectionBgImage = window.getComputedStyle(currentSection).backgroundImage;
-			
-			// Check if this is a section where we need to invert
-			if (needsInversion(sectionBgColor, sectionBgImage)) {
-				logo.style.filter = "invert(1)";
-				menuIcon.style.filter = "invert(1)";
-			} else {
-				logo.style.filter = "none";
-				menuIcon.style.filter = "none";
+
+		// Enhanced function to determine if inversion is needed
+		function needsInversion(backgroundColor, backgroundImage) {
+			// If there's a background image that's not "none", we might need special handling
+			const hasBackgroundImage = backgroundImage && backgroundImage !== "none";
+
+			// Get the logo and menu icon color (you may need to define these explicitly)
+			// For example, if your logo is black (#000000) or close to it:
+			const logoColor = { r: 0, g: 0, b: 0 }; // Assuming black logo
+
+			// Parse the backgroundColor to get RGB values
+			const rgbValues = backgroundColor.match(/\d+/g);
+
+			if (!rgbValues || rgbValues.length < 3) {
+				// If we can't parse the color, default behavior based on section
+				return hasBackgroundImage || isKnownDarkSection(backgroundColor);
 			}
+
+			const r = parseInt(rgbValues[0]);
+			const g = parseInt(rgbValues[1]);
+			const b = parseInt(rgbValues[2]);
+
+			// Calculate color similarity between background and logo
+			const colorSimilarity = calculateColorSimilarity(
+				{ r, g, b },
+				logoColor
+			);
+
+			// Calculate the perceived brightness
+			const brightness = (0.299 * r + 0.587 * g + 0.114 * b);
+
+			// If colors are similar OR background is dark, invert
+			return colorSimilarity > 85 || brightness < 128;
 		}
-	}
-	
-	// Enhanced function to determine if inversion is needed
-	function needsInversion(backgroundColor, backgroundImage) {
-		// If there's a background image that's not "none", we might need special handling
-		const hasBackgroundImage = backgroundImage && backgroundImage !== "none";
-		
-		// Get the logo and menu icon color (you may need to define these explicitly)
-		// For example, if your logo is black (#000000) or close to it:
-		const logoColor = { r: 0, g: 0, b: 0 }; // Assuming black logo
-		
-		// Parse the backgroundColor to get RGB values
-		const rgbValues = backgroundColor.match(/\d+/g);
-		
-		if (!rgbValues || rgbValues.length < 3) {
-			// If we can't parse the color, default behavior based on section
-			return hasBackgroundImage || isKnownDarkSection(backgroundColor);
+
+		// Calculate how similar two colors are (0-100%)
+		function calculateColorSimilarity(color1, color2) {
+			// Calculate the Euclidean distance in RGB space
+			const distance = Math.sqrt(
+				Math.pow(color1.r - color2.r, 2) +
+				Math.pow(color1.g - color2.g, 2) +
+				Math.pow(color1.b - color2.b, 2)
+			);
+
+			// Convert to a similarity percentage (0-100)
+			// Max distance in RGB space is √(255² + 255² + 255²) ≈ 441.7
+			return 100 - (distance / 441.7 * 100);
 		}
-		
-		const r = parseInt(rgbValues[0]);
-		const g = parseInt(rgbValues[1]);
-		const b = parseInt(rgbValues[2]);
-		
-		// Calculate color similarity between background and logo
-		const colorSimilarity = calculateColorSimilarity(
-			{ r, g, b },
-			logoColor
-		);
-		
-		// Calculate the perceived brightness
-		const brightness = (0.299 * r + 0.587 * g + 0.114 * b);
-		
-		// If colors are similar OR background is dark, invert
-		return colorSimilarity > 85 || brightness < 128;
-	}
-	
-	// Calculate how similar two colors are (0-100%)
-	function calculateColorSimilarity(color1, color2) {
-		// Calculate the Euclidean distance in RGB space
-		const distance = Math.sqrt(
-			Math.pow(color1.r - color2.r, 2) +
-			Math.pow(color1.g - color2.g, 2) +
-			Math.pow(color1.b - color2.b, 2)
-		);
-		
-		// Convert to a similarity percentage (0-100)
-		// Max distance in RGB space is √(255² + 255² + 255²) ≈ 441.7
-		return 100 - (distance / 441.7 * 100);
-	}
-	
-	// Helper function for known dark sections
-	function isKnownDarkSection(backgroundColor) {
-		// List of sections we know should have inverted logo/menu
-		const darkSectionColors = [
-			"rgb(34, 38, 247)",    // Blue section (#2226f7)
-			"rgb(0, 0, 0)",        // Black section
-			"rgb(34, 34, 34)"      // Dark gray section
-		];
-		
-		return darkSectionColors.includes(backgroundColor);
-	}
-	
-	// Run on page load
-	document.addEventListener('DOMContentLoaded', function() {
-		checkBackgroundAndInvertImages();
-		
-		// Run when scrolling
-		window.addEventListener('scroll', checkBackgroundAndInvertImages);
-		
-		// Run on window resize
-		window.addEventListener('resize', checkBackgroundAndInvertImages);
-		
-		// Observe changes to the navbar element
-		const observer = new MutationObserver(checkBackgroundAndInvertImages);
-		observer.observe(document.getElementById('navbar'), { attributes: true, attributeFilter: ['class'] });
-	});
-		</script>
+
+		// Helper function for known dark sections
+		function isKnownDarkSection(backgroundColor) {
+			// List of sections we know should have inverted logo/menu
+			const darkSectionColors = [
+				"rgb(34, 38, 247)",    // Blue section (#2226f7)
+				"rgb(0, 0, 0)",        // Black section
+				"rgb(34, 34, 34)"      // Dark gray section
+			];
+
+			return darkSectionColors.includes(backgroundColor);
+		}
+
+		// Run on page load
+		document.addEventListener('DOMContentLoaded', function () {
+			checkBackgroundAndInvertImages();
+
+			// Run when scrolling
+			window.addEventListener('scroll', checkBackgroundAndInvertImages);
+
+			// Run on window resize
+			window.addEventListener('resize', checkBackgroundAndInvertImages);
+
+			// Observe changes to the navbar element
+			const observer = new MutationObserver(checkBackgroundAndInvertImages);
+			observer.observe(document.getElementById('navbar'), { attributes: true, attributeFilter: ['class'] });
+		});
+	</script>
 </body>
 
 </html>
