--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
         }
     </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     
     <!-- Navbar -->
     <nav id="navbar" class="bg-transparent sm:bg-transparent backdrop-blur-md sm:backdrop-blur-none transition-transform duration-500 ease-in-out opacity-100 fixed w-full left-0 px-5 z-50">
