index close button fixed

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         class="fixed top-0 left-0 w-full h-full bg-[#ffd527] flex flex-col justify-center items-center text-[#2025f8] text-xl uppercase tracking-widest z-50 hidden">
         <!-- Close Button -->
         <button id="close-menu"
-            class="absolute top-6 right-6 text-4xl font-bold text-[#2025f8] transition duration-300">
-            ✖
+            class="absolute top-6 right-6 text-[4rem] font-bold text-[#2025f8] transition duration-300">
+             &times;
         </button>
 
         <!-- Menu Items -->
