--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             </div>
 
             <!-- Horse (Fixed: Applied absolute positioning to the container) -->
-            <div id="horse-container" class="absolute bottom-0 left-[10px]" style="position: absolute; bottom: 0px;">
+            <div id="horse-container" class="absolute bottom-0 left-80" style="position: absolute; bottom: 0px;">
                 <img id="horse" src="/MIW_Website_Assets/Horse_Game.png" alt="Horse"
                     class="w-[150px] sm:w-[200px] md:w-[200px]">
             </div>
@@ -391,7 +391,7 @@
             <!-- <p id="score" class="absolute top-5 left-5 text-lg font-bold text-gray-700">play by enter button</p> -->
 
             <!-- Play Button -->
-            <div class="absolute top-10 right-10 sm:right-20 md:right-32 flex items-center gap-4">
+            <div class="absolute top-10 right-10 sm:right-72 flex items-center gap-4">
                 <img src="/MIW_Website_Assets/Play_button_Game.png" alt="Play" class="w-12 sm:w-16 cursor-pointer"
                     id="play-button">
                 <p class="text-sm sm:text-lg md:text-xl text-pink-500 font-semibold text-center sm:text-left">
