intex page nav font fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        .lato-font {
+        body {
             font-family: 'Lato', sans-serif;
         }
 
@@ -85,7 +85,7 @@
         class="fixed top-0 left-0 w-full h-full bg-[#ffd527] flex flex-col justify-center items-center text-[#2025f8] text-xl uppercase tracking-widest z-50 hidden">
         <!-- Close Button -->
         <button id="close-menu"
-            class="absolute top-6 right-6 text-[4rem] font-bold text-[#2025f8] transition duration-300">
+            class="absolute top-6 right-6 text-[3rem] font-bold text-[#2025f8] transition duration-300">
              &times;
         </button>
 
